Bug 138157 - Upon entering edit mode the second time, another cursor appears in the adjacent cell (gtk3)
Summary: Upon entering edit mode the second time, another cursor appears in the adjace...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-weld-InputBar
  Show dependency treegraph
 
Reported: 2020-11-12 10:51 UTC by Buovjaga
Modified: 2022-06-09 01:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2020-11-12 10:51:25 UTC
1. Launch Calc with gtk3 backend
2. Double-click a cell and then double-click another cell

A second cursor will appear in the cell to the left. The distance increases depending on the column you are editing in.

Not seen on Windows or the other Linux backends.

First reported by Joel in dev chat.

Bibisected with linux64-7.1 to
https://git.libreoffice.org/core/commit/e087e25f05e689091cbf1c4f91b6e93878ac17ec
weld InputBar

Adding Cc: to Caolán McNamara
Comment 1 Caolán McNamara 2020-11-12 12:40:36 UTC
I wonder what on earth that is, maybe its a misplaced cursor
Comment 2 Commit Notification 2020-11-13 12:40:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c54e1c22f30c23d00e2fe7521217569fcec59cc4

tdf#138157 turn off cursor earlier

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2020-11-13 15:59:45 UTC
Verified, thanks!

Version: 7.1.0.0.alpha1+
Build ID: c54e1c22f30c23d00e2fe7521217569fcec59cc4
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded